--- a/src/pages/LandingPages/SignUp/SignUp.css
+++ b/src/pages/LandingPages/SignUp/SignUp.css
@@ -12,7 +12,8 @@ Coded by www.danyo.tech
 * The above copyright notice and this permission notice shall be included in all copies or substantial portions of the Software.
 */
 
-.GithubLogin {
+.socialAuthButton {
+    /* Button background */
     background-color: #0148a4 !important;
     width: 20vw;
     margin-bottom: 10px;
@@ -20,20 +21,10 @@ Coded by www.danyo.tech
     margin-bottom: 10px;
     color: #eaebed;
 
-    /* font-family:Verdana !important; */
+    /* Button text */
     font-weight: 600 !important;
     border-color: #0148a4 !important;
     border-radius: 25px !important;
     border: 0px !important;
     font-size: 0.9vw !important;
-}
-
-.GOOGLE {
-    background-color: #f94033 !important;
-    width: 20vw;
-    margin-bottom: 10px;
-    height: 4.5vh;
-    text-align: center !important;
-    border-radius: 25px !important;
-    border: 0 !important;
 }
