--- a/src/pages/LandingPages/SignUp/SignUp.css
+++ b/src/pages/LandingPages/SignUp/SignUp.css
@@ -28,3 +28,8 @@ Coded by www.danyo.tech
     border: 0px !important;
     font-size: 0.9vw !important;
 }
+
+.authIcon {
+    position: absolute;
+    left: 12px;
+}
