--- a/src/pages/LandingPages/SignUp/SignUp.css
+++ b/src/pages/LandingPages/SignUp/SignUp.css
@@ -20,6 +20,8 @@ Coded by www.danyo.tech
     height: 4.5vh;
     margin-bottom: 10px;
     color: #2b3b52;
+    position: relative;
+    border-radius: 5px;
 
     /* Button text */
     font-weight: 600 !important;
@@ -31,4 +33,5 @@ Coded by www.danyo.tech
 .authIcon {
     position: absolute !important;
     left: 12px !important;
+    font-weight: bold;
 }
