--- a/src/pages/LandingPages/SignUp/SignUp.css
+++ b/src/pages/LandingPages/SignUp/SignUp.css
@@ -14,17 +14,17 @@ Coded by www.danyo.tech
 
 .socialAuthButton {
     /* Button background */
-    background-color: #eff3ff !important;
+    background-color: #0148a4 !important;
     width: 20vw;
     margin-bottom: 10px;
     height: 4.5vh;
     margin-bottom: 10px;
-    color: #2b3b52;
-    border-radius: 5px !important;
+    color: #eaebed;
 
     /* Button text */
     font-weight: 600 !important;
-    border-color: #2b3b52 !important;
+    border-color: #0148a4 !important;
+    border-radius: 25px !important;
     border: 0px !important;
     font-size: 0.9vw !important;
 }
