Brightened button background color

--- a/src/pages/LandingPages/SignUp/SignUp.css
+++ b/src/pages/LandingPages/SignUp/SignUp.css
@@ -14,7 +14,7 @@ Coded by www.danyo.tech
 
 .socialAuthButton {
     /* Button background */
-    background-color: #0148a4 !important;
+    background-color: #aeb5be !important;
     width: 20vw;
     margin-bottom: 10px;
     height: 4.5vh;
